--- a/Planets/Resources/Base.lproj/Main.storyboard
+++ b/Planets/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,171 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZeZ-Mo-PSb">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Planets Collection View Controller-->
+        <scene sceneID="Huv-c7-Eg2">
+            <objects>
+                <collectionViewController id="dud-y1-QWj" customClass="PlanetsCollectionViewController" customModule="Planets" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="mB2-si-tN2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="85U-5P-DCz">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PlanetCell" id="kIV-49-e91" customClass="PlanetCollectionViewCell" customModule="Planets" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9qc-83-H8W">
+                                    <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="10c-cP-kOZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cb2-1R-c1M">
+                                                    <rect key="frame" x="0.0" y="0.0" width="120" height="119.66666666666667"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="120" id="6Je-20-Nva"/>
+                                                        <constraint firstAttribute="height" constant="119.67" id="xFS-F4-LHX"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mIV-ac-EKd">
+                                                    <rect key="frame" x="0.0" y="119.66666666666667" width="120" height="20.333333333333329"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="10c-cP-kOZ" secondAttribute="trailing" id="JQF-Vt-b0b"/>
+                                        <constraint firstAttribute="bottom" secondItem="10c-cP-kOZ" secondAttribute="bottom" id="PKe-aw-eaN"/>
+                                        <constraint firstItem="10c-cP-kOZ" firstAttribute="top" secondItem="9qc-83-H8W" secondAttribute="top" id="PZV-56-UkI"/>
+                                        <constraint firstItem="10c-cP-kOZ" firstAttribute="leading" secondItem="9qc-83-H8W" secondAttribute="leading" id="Qle-SS-ieg"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <size key="customSize" width="120" height="140"/>
+                                <connections>
+                                    <outlet property="planetImageView" destination="cb2-1R-c1M" id="7sE-wl-cG2"/>
+                                    <outlet property="planetNameLabel" destination="mIV-ac-EKd" id="lDT-Qr-meD"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="dud-y1-QWj" id="cFq-gH-xNh"/>
+                            <outlet property="delegate" destination="dud-y1-QWj" id="uVD-Wg-bhk"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="Ga2-Kg-Ziz">
+                        <barButtonItem key="rightBarButtonItem" title="Settings" id="BA4-Cd-O3z">
+                            <connections>
+                                <segue destination="w4S-mk-B4L" kind="presentation" identifier="SettingsModalSegue" id="IBa-gN-TRN"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gQJ-Ze-U7U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="865" y="108"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="bEp-4E-ThR">
+            <objects>
+                <viewController id="5Gn-Pl-i7v" customClass="SettingsViewController" customModule="Planets" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dsg-yR-8g5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="E9e-nb-NnG">
+                                <rect key="frame" x="24" y="132" width="327" height="31"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Is Pluto a Planet?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N3r-Db-cJx">
+                                        <rect key="frame" x="0.0" y="0.0" width="262" height="31"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BSy-hx-rpL">
+                                        <rect key="frame" x="278" y="0.0" width="51" height="31"/>
+                                        <connections>
+                                            <action selector="didTogglePluto:" destination="5Gn-Pl-i7v" eventType="valueChanged" id="SGE-kM-3yw"/>
+                                        </connections>
+                                    </switch>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="E9e-nb-NnG" firstAttribute="leading" secondItem="HPw-2R-A8v" secondAttribute="leading" constant="24" id="CLF-Lm-A0D"/>
+                            <constraint firstItem="E9e-nb-NnG" firstAttribute="top" secondItem="HPw-2R-A8v" secondAttribute="top" constant="24" id="a9p-qG-mkv"/>
+                            <constraint firstItem="HPw-2R-A8v" firstAttribute="trailing" secondItem="E9e-nb-NnG" secondAttribute="trailing" constant="24" id="itd-jX-czx"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="HPw-2R-A8v"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Settings" id="Llk-YD-Lu0">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="DeM-UW-iDE">
+                            <connections>
+                                <segue destination="uWk-UW-Cgq" kind="unwind" unwindAction="unwindToPlanetCollectionViewControllerWithSegue:" id="hqk-6n-kNs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="plutoToggle" destination="BSy-hx-rpL" id="ekc-aD-ffT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QxP-hC-n2l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="uWk-UW-Cgq" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2416.8000000000002" y="107.88177339901478"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="1vw-AE-OBE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZeZ-Mo-PSb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MZb-3d-h3z">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="dud-y1-QWj" kind="relationship" relationship="rootViewController" id="786-jo-Vs1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="18U-1s-NsA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="144.80000000000001" y="107.88177339901478"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YAp-Je-zx1">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="w4S-mk-B4L" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="R7y-En-wfQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="108"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5Gn-Pl-i7v" kind="relationship" relationship="rootViewController" id="wOT-JN-dQh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0QV-UO-iol" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1703" y="108"/>
+        </scene>
+    </scenes>
 </document>
